# CQT-reporting

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  benchmarking_problems.md  config.py  pyproject.toml
data/BASELINE/: index.html  meta.json
data/DEMODATA/: fidelity2qb_BASELINE.json  swap_q1.json  swap_q1_coupler.json  swap_q2.json  swap_q2_coupler.json
data/QFT/: QFT_5q_1024shots.json  QFT_on_[0, 3, 6]_1000shots.json  QFT_on_[0, 3, 6]_1000shots_devicenumpy.json
data/QFT_sim/: QFT_on_[0, 1, 2, 3, 4]_1000shots.json
data/ghz/: ghz_5q_samples.json
data/grover2q/: data.json  results.json
data/mermin/: data_mermin_3q.json  mermin_3q.json  mermin_5q.json
data/process_tomography/: results_process_tomography.json
data/rb-1306/: history.json  meta.json  runcard.yml
data/reuploading/: results_reuploading.json
data/reuploading_classifier/: data_reuploading_classifier.json  loss_history.npy  report_data.json  results_reuploading_classifier.json  test_predictions.npy  train_predictions.npy
data/reuploading_classifier_load_and_test/: data_reuploading_classifier.json  results_reuploading_classifier.json
data/universal_approx_numpy_500shots/: loss_history.npy  mad_predictions.npy  median_predictions.npy  report_data.json
data/universal_approximant/: results.json
scripts/: config.py  runscripts.py  simple.py
scripts/GHZ/: GHZ.py  main.py
scripts/QFT/: QFT_sim.py  main.py
scripts/QFT_sim/: QFT_sim.py  plots.py
scripts/calibration/: coherence.yml
src/: bootstrap_server.py  client.py  config.py  fillers.py  main.py  plots.py  server.py  utils.py
(+290 files in other folders)
